	 (rest of patch #1080531) (Fred).
20050111 zxcf.c: Stop zxcf_reset overwriting romcs bank when zxcf isn't active
	 (fixes TR-DOS machines) (Fred).
20050111 machines/pentagon.c: Don't allow Interface I to be used with the
	 Pentagon, it masks the TR-DOS interface (Fred).
20050111 machines/pentagon.c: Remove if1 from peripherals array (Fred).
20050112 lib/{tape_ts2068.szx|Makefile.am}: Add TS2068 tape auto-load snapshot
         tape.c: Fix tape traps for TS2068 (Fred).
20050113 settings.dat,sound.c,sound/sdlsound.c,man/fuse.1: Allow the user to
         set the frequency to use with the sound card, and make the SDL sound
         driver pass back the obtained frequency if it is not able to get that
         originally requested as long as it gets a native endian 16 bit format
         (Fred).
20050113 ui/scaler/{scaler.[ch],scaler_internals.h,scalers.c},
         ui/sdl/sdldisplay.c: Undo accidental commit (Fred).
20050113 menu_data.c: add TS2068 to change ROMs menu.
20050114 ui/scaler/scalers.c: Undo accidental commit again (Fred).
20050115 settings.pl: Add short option for sound frequency (Fred).
20050115 hacking/implementation_notes.txt: update with new display algorithm.
20050115 sound/aosound.c: small fixes (Gergely).
20050115 man/fuse.1: add documentation for libao sound driver (Gergely).
20050205 Makefile.am: Add kempmouse.h to headers list (Fred).
20050205 sound/sdlsound.c: Remove unused socket header and replace setenv with
         putenv for Windows compatibility (Fred).
20050212 ui/gtk/{gtkinternals.h,pixmaps.c,statusbar.c}: add mouse icon
	 (Darren).
20050216 Makefile.am,menu.[ch],menu_data.c,profile.[ch],z80/{coretest.c,
	 z80_ops.c}: add very simple profiler; just records which
	 locations where executed at the moment.
20050217 profile.[ch],spectrum.c: make the profiler actually profile.
20050218 Makefile.am,ide.[ch],simpleide.c,zxatasp.c,zxcf.c: add "Save,
	 Don't Save, Cancel" functionality on IDE disk eject.