@@ -196,33 +196,24 @@ zxatasp_reset( void )
 int
 zxatasp_insert( const char *filename, libspectrum_ide_unit unit )
 {
+  char **setting;
   ui_menu_item item;
-  int error;
 
   switch( unit ) {
   case LIBSPECTRUM_IDE_MASTER:
-    error = settings_set_string( &settings_current.zxatasp_master_file,
-				 filename );
+    setting = &settings_current.zxatasp_master_file;
     item = UI_MENU_ITEM_MEDIA_IDE_ZXATASP_MASTER_EJECT;
     break;
     
   case LIBSPECTRUM_IDE_SLAVE:
-    error = settings_set_string( &settings_current.zxatasp_slave_file,
-				 filename );
+    setting = &settings_current.zxatasp_slave_file;
     item = UI_MENU_ITEM_MEDIA_IDE_ZXATASP_SLAVE_EJECT;
     break;
     
   default: return 1;
   }
-  
-  if( error ) return error;
 
-  error = libspectrum_ide_insert( zxatasp_idechn0, unit, filename );
-  if( error ) return error;
-
-  error = ui_menu_activate( item, 1 ); if( error ) return error;
-
-  return 0;
+  return ide_insert( filename, zxatasp_idechn0, unit, setting, item );
 }
 
 int
